test-suite/cases/eure-schema-to-json-schema/errors/tuple-constraints-not-supported.eure
// Test error: Tuple constraints cannot be fully represented in JSON Schema

schema = ```eure
$variant = "tuple"
elements = [`text`, `integer`]
```

json_schema_errors[] = "Tuple constraints not fully supported in JSON Schema"
